fix: make datepicker popover z-index higher than fixed price-box (#161)

--- a/src/scss/_price-box.scss
+++ b/src/scss/_price-box.scss
@@ -8,7 +8,7 @@
   position: fixed;
   bottom: 0;
   left: 0;
-  z-index: 40;
+  z-index: $zindex-fixed;
   width: 100%;
   cursor: pointer;
   background: $white;
